# PICcol

./: .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
src/: datatypes.cpp  datatypes.h  evolution.cpp  evolution.h  filler.cpp  filler.h  main.cpp
